# crypto-watchlist

./: .env.example  .gitignore  .gitmodules  Cargo.toml  Dockerfile  compose.yaml  token_info.json  vector.yaml
logs/: crypto-watchlist.2024-07-21
migrations/: 20240518091333_init_db.sql  20240519150124_alter_historical_data_column_type.sql  20240523075434_alter_drop_unique_constraint_symbol_on_assets.sql
proto/: watchlist.proto
src/: cache.rs  config.rs  data_provider.rs  database.rs  errors.rs  health.rs  helpers.rs  main.rs  middleware_custom.rs  routes.rs  server.rs  watchlist.rs  watchlistgroup.rs
