[package]
name = "crypto-watchlist"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.3"
actix-rt = "2.9.0"
actix-web = "4.7.0"
reqwest = {version = "0.11.0", features = ["stream", "json"] }
chrono = "0.4.38"
dotenv = "0.15.0"
env_logger = "0.11.3"
envy = "0.4.2"
lazy_static = "1.4.0"
log = "0.4.21"
redis-async = "0.17.2"
serde = "1.0.202"
serde_derive = "1.0.202"
serde_json = "1.0.117"
sqlx = {version = "0.7.4", features = ["runtime-async-std", "postgres", "chrono", "macros"] }
uuid = { version = "1.9.1", features = ["serde", "v7"] }
futures-util = "0.3"
derive_more = "0.99.17"
mockall = "0.12.1"
async-trait = "0.1.80"
actix-web-httpauth = "0.8.2"
jsonwebtoken = "9.3.0"
kafka = "0.10.0"
openssl-sys = "0.9.103"
tracing-appender = "0.2.3"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
tracing-futures = "0.2.5"
tracing-actix-web = "0.7.11"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing = "0.1.40"
